add kits system and various fixes
resolve #79
resolve #98
resolve #97
