# gen/kit/server/kit_grpc.pb.go
@@ -1,0 +1,246 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.5.1
+// - protoc             (unknown)
+// source: kit/server/kit.proto
+
+package server
+
+import (
+	context "context"
+	v1 "github.com/lasthearth/vsservice/gen/kit/v1"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	KitServiceHandler_GetAvailableKits_FullMethodName    = "/kit.server.KitServiceHandler/GetAvailableKits"
+	KitServiceHandler_AssignKitToUser_FullMethodName     = "/kit.server.KitServiceHandler/AssignKitToUser"
+	KitServiceHandler_GetAssignmentStatus_FullMethodName = "/kit.server.KitServiceHandler/GetAssignmentStatus"
+	KitServiceHandler_ListUserAssignments_FullMethodName = "/kit.server.KitServiceHandler/ListUserAssignments"
+)
+
+// KitServiceHandlerClient is the client API for KitServiceHandler service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// Server-side handlers for the KitService
+type KitServiceHandlerClient interface {
+	// Get all available kits that can be assigned to users
+	GetAvailableKits(ctx context.Context, in *v1.GetAvailableKitsRequest, opts ...grpc.CallOption) (*v1.GetAvailableKitsResponse, error)
+	// Assign a specific kit to a user
+	AssignKitToUser(ctx context.Context, in *v1.AssignKitToUserRequest, opts ...grpc.CallOption) (*v1.AssignKitToUserResponse, error)
+	// Get the status of a specific kit assignment
+	GetAssignmentStatus(ctx context.Context, in *v1.GetAssignmentStatusRequest, opts ...grpc.CallOption) (*v1.GetAssignmentStatusResponse, error)
+	// List all kit assignments for a specific user
+	ListUserAssignments(ctx context.Context, in *v1.ListUserAssignmentsRequest, opts ...grpc.CallOption) (*v1.ListUserAssignmentsResponse, error)
+}
+
+type kitServiceHandlerClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewKitServiceHandlerClient(cc grpc.ClientConnInterface) KitServiceHandlerClient {
+	return &kitServiceHandlerClient{cc}
+}
+
+func (c *kitServiceHandlerClient) GetAvailableKits(ctx context.Context, in *v1.GetAvailableKitsRequest, opts ...grpc.CallOption) (*v1.GetAvailableKitsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(v1.GetAvailableKitsResponse)
+	err := c.cc.Invoke(ctx, KitServiceHandler_GetAvailableKits_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *kitServiceHandlerClient) AssignKitToUser(ctx context.Context, in *v1.AssignKitToUserRequest, opts ...grpc.CallOption) (*v1.AssignKitToUserResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(v1.AssignKitToUserResponse)
+	err := c.cc.Invoke(ctx, KitServiceHandler_AssignKitToUser_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *kitServiceHandlerClient) GetAssignmentStatus(ctx context.Context, in *v1.GetAssignmentStatusRequest, opts ...grpc.CallOption) (*v1.GetAssignmentStatusResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(v1.GetAssignmentStatusResponse)
+	err := c.cc.Invoke(ctx, KitServiceHandler_GetAssignmentStatus_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *kitServiceHandlerClient) ListUserAssignments(ctx context.Context, in *v1.ListUserAssignmentsRequest, opts ...grpc.CallOption) (*v1.ListUserAssignmentsResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(v1.ListUserAssignmentsResponse)
+	err := c.cc.Invoke(ctx, KitServiceHandler_ListUserAssignments_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// KitServiceHandlerServer is the server API for KitServiceHandler service.
+// All implementations should embed UnimplementedKitServiceHandlerServer
+// for forward compatibility.
+//
+// Server-side handlers for the KitService
+type KitServiceHandlerServer interface {
+	// Get all available kits that can be assigned to users
+	GetAvailableKits(context.Context, *v1.GetAvailableKitsRequest) (*v1.GetAvailableKitsResponse, error)
+	// Assign a specific kit to a user
+	AssignKitToUser(context.Context, *v1.AssignKitToUserRequest) (*v1.AssignKitToUserResponse, error)
+	// Get the status of a specific kit assignment
+	GetAssignmentStatus(context.Context, *v1.GetAssignmentStatusRequest) (*v1.GetAssignmentStatusResponse, error)
+	// List all kit assignments for a specific user
+	ListUserAssignments(context.Context, *v1.ListUserAssignmentsRequest) (*v1.ListUserAssignmentsResponse, error)
+}
+
+// UnimplementedKitServiceHandlerServer should be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedKitServiceHandlerServer struct{}
+
+func (UnimplementedKitServiceHandlerServer) GetAvailableKits(context.Context, *v1.GetAvailableKitsRequest) (*v1.GetAvailableKitsResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetAvailableKits not implemented")
+}
+func (UnimplementedKitServiceHandlerServer) AssignKitToUser(context.Context, *v1.AssignKitToUserRequest) (*v1.AssignKitToUserResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method AssignKitToUser not implemented")
+}
+func (UnimplementedKitServiceHandlerServer) GetAssignmentStatus(context.Context, *v1.GetAssignmentStatusRequest) (*v1.GetAssignmentStatusResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetAssignmentStatus not implemented")
+}
+func (UnimplementedKitServiceHandlerServer) ListUserAssignments(context.Context, *v1.ListUserAssignmentsRequest) (*v1.ListUserAssignmentsResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListUserAssignments not implemented")
+}
+func (UnimplementedKitServiceHandlerServer) testEmbeddedByValue() {}
+
+// UnsafeKitServiceHandlerServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to KitServiceHandlerServer will
+// result in compilation errors.
+type UnsafeKitServiceHandlerServer interface {
+	mustEmbedUnimplementedKitServiceHandlerServer()
+}
+
+func RegisterKitServiceHandlerServer(s grpc.ServiceRegistrar, srv KitServiceHandlerServer) {
+	// If the following call pancis, it indicates UnimplementedKitServiceHandlerServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&KitServiceHandler_ServiceDesc, srv)
+}
+
+func _KitServiceHandler_GetAvailableKits_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(v1.GetAvailableKitsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(KitServiceHandlerServer).GetAvailableKits(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: KitServiceHandler_GetAvailableKits_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(KitServiceHandlerServer).GetAvailableKits(ctx, req.(*v1.GetAvailableKitsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _KitServiceHandler_AssignKitToUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(v1.AssignKitToUserRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(KitServiceHandlerServer).AssignKitToUser(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: KitServiceHandler_AssignKitToUser_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(KitServiceHandlerServer).AssignKitToUser(ctx, req.(*v1.AssignKitToUserRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _KitServiceHandler_GetAssignmentStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(v1.GetAssignmentStatusRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(KitServiceHandlerServer).GetAssignmentStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: KitServiceHandler_GetAssignmentStatus_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(KitServiceHandlerServer).GetAssignmentStatus(ctx, req.(*v1.GetAssignmentStatusRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _KitServiceHandler_ListUserAssignments_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(v1.ListUserAssignmentsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(KitServiceHandlerServer).ListUserAssignments(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: KitServiceHandler_ListUserAssignments_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(KitServiceHandlerServer).ListUserAssignments(ctx, req.(*v1.ListUserAssignmentsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// KitServiceHandler_ServiceDesc is the grpc.ServiceDesc for KitServiceHandler service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var KitServiceHandler_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "kit.server.KitServiceHandler",
+	HandlerType: (*KitServiceHandlerServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetAvailableKits",
+			Handler:    _KitServiceHandler_GetAvailableKits_Handler,
+		},
+		{
+			MethodName: "AssignKitToUser",
+			Handler:    _KitServiceHandler_AssignKitToUser_Handler,
+		},
+		{
+			MethodName: "GetAssignmentStatus",
+			Handler:    _KitServiceHandler_GetAssignmentStatus_Handler,
+		},
+		{
+			MethodName: "ListUserAssignments",
+			Handler:    _KitServiceHandler_ListUserAssignments_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "kit/server/kit.proto",
+}
